# electronic-music-archivist

./: .gitignore  pyproject.toml
src/agent/: research_agent.py
src/llms/: ollama_llm.py
src/models/: house_dj.py
src/tools/: serper_search.py
src/utils/: serper_search.py
tests/: test_research_agent.py  test_serper_search.py
tests/integration/: test_research_agent_integration.py
