[project]
name = "electronic-music-archivist"
version = "0.1.0"
description = "An autonomous research agent for deep dives into iconic House DJs and electronic music."
authors = [
    { name = "Aida" }
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "google-search-results~=2.4.2",
    "httpx~=0.28.1",
    "langchain~=0.3.26",
    "langchain-community~=0.3.26",
    "langchain-google-genai~=2.1.6",
    "langchain-ollama~=0.3.4",
    "mypy~=1.16.1",
    "pytest~=8.4.1",
    "python-dotenv~=1.1.1",
    "requests~=2.32.4",
    "ruff~=0.12.1",
    "tenacity~=9.1.2",
    "types-requests~=2.32.4.20250611",
    "uvicorn~=0.35.0",
]

[tool.ruff]
line-length = 120
lint.select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
namespace_packages = true
explicit_package_bases = true

[tool.pytest.ini_options]
python_files = "test_*.py"